@@ -23,8 +23,6 @@
 # questions.
 #
 
-#
-
 if [ x"$TESTJAVA" = x ]; then 
         TESTJAVA=$1 
         shift 
@@ -32,6 +30,19 @@ fi
 if [ x"$TESTCLASSES" = x ]; then TESTCLASSES=.; fi
 if [ x"$TESTSRC" = x ]; then TESTSRC=.; fi
 
+OS=`uname -s`
+case "$OS" in
+  Windows* | CYGWIN* )
+    PS=";"
+    FS="\\"
+    ;;
+  * )
+    PS=":"
+    FS="/"
+    ;;
+esac
+
 # now start the test
-${TESTJAVA}/bin/java ${TESTVMOPTS} -Djava.ext.dirs=$TESTSRC -cp $TESTCLASSES GetDotResource
+${TESTJAVA}/bin/java ${TESTVMOPTS} -cp ${TESTSRC}${FS}resource.jar${PS}${TESTCLASSES} GetDotResource
+
 
